--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,1 +1,14 @@
 site_name: DataHub
+docs_dir: docs
+
+nav:
+    - Home: 'index.md'
+    - Platform:
+        'Linux': 'plat/linux.md'
+    - Software:
+        'Git': 'soft/git.md'
+    - Language:
+        - 'Python': 'lang/python.md'
+        - 'MATLAB': 'lang/matlab.md'
+        - 'R': 'lang/r.md'
+        - 'LaTeX': 'lang/latex.md'
