--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,6 +7,7 @@ nav:
         'Linux': 'plat/linux.md'
     - Software:
         'Git': 'soft/git.md'
+        'Package Manager': 'soft/pack.md'
     - Language:
         - 'Python': 'lang/python.md'
         - 'MATLAB': 'lang/matlab.md'
